--- a/_quarto.yml
+++ b/_quarto.yml
@@ -34,7 +34,7 @@ book:
 
 
 # Note: If you do not have any Zotero references, you should disable the 'references.qmd' file or else it will cause an error when rendering.    
-#    - references.qmd
+    - references.qmd
 
 # References
 bibliography: https://twuonline.github.io/course-materials/quarto/references.bib
