--- a/_quarto.yml
+++ b/_quarto.yml
@@ -32,8 +32,7 @@ book:
 #    - assignment3.qmd
 #    - cheatsheet.qmd
 
-
-# Note: If you do not have any Zotero references, you should disable the 'references.qmd' file or else it will cause an error when rendering.    
+# Note: If you do not have any Zotero references, you should disable the 'references.qmd' file or else it will cause an error when rendering.
 #    - references.qmd
 
 # References
@@ -55,15 +54,16 @@ title-block-banner: true
 # ------- Format Specific Settings -------
 
 format:
-# Format - HTML
+  # Format - HTML
   html:
-    template-partials:
-      yml-assets/title-block.html
-      
+    template-partials: yml-assets/title-block.html
+
     sidebar:
       style: "docked"
       search: true
-    css: https://twuonline.github.io/course-materials/quarto/twu_styles.css
+    css:
+      - https://twuonline.github.io/course-materials/quarto/twu_styles.css
+      - https://twuonline.github.io/course-materials/quiz/ldrs664/webex.css
     toc-depth: 4
     toc: true
     toc-title: On This Page
@@ -71,15 +71,19 @@ format:
     # The line below  should only be enabled to locally test css before moving it to the main css file in course materials.
     #theme: [cosmo, yml-assets/test.scss]
     include-in-header:
-    - text: |
-        <script type="application/javascript" src="https://twuonline.github.io/course-materials/quarto/twu_global_header.js"></script>
-        <link rel = "shortcut icon" href = "https://twuonline.github.io/course-materials/quarto/favicon.ico" />
-        
-# # Format - PDF
-#   pdf:
-#     documentclass: scrreprt
+      - text: |
+          <script type="application/javascript" src="https://twuonline.github.io/course-materials/quarto/twu_global_header.js"></script>
+          <link rel = "shortcut icon" href = "https://twuonline.github.io/course-materials/quarto/favicon.ico" />
 
-# Format - Doc
+    include-after-body:
+      - text: |
+          <script type="application/javascript" src="https://twuonline.github.io/course-materials/quiz/ldrs664/webex.js"></script>
+          <script type="application/javascript" src="https://twuonline.github.io/course-materials/quiz/carousel.js"></script>
+  # # Format - PDF
+  #   pdf:
+  #     documentclass: scrreprt
+
+  # Format - Doc
   docx:
     toc: false
     number-sections: true
@@ -89,4 +93,3 @@ format:
 fig-cap-location: top
 lightbox:
   desc-position: top
-
